fix: change footer year format, css reset, adapt sticky buttons to scrollbars

--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -42,6 +42,9 @@
         max-width: 1601px
     }
 }
+.collapse {
+    visibility: collapse
+}
 .fixed {
     position: fixed
 }
@@ -54,8 +57,8 @@
 .sticky {
     position: sticky
 }
-.-top-2 {
-    top: -0.5rem
+.-top-1 {
+    top: -0.25rem
 }
 .bottom-0 {
     bottom: 0px
@@ -74,15 +77,6 @@
 }
 .top-12 {
     top: 3rem
-}
-.top-\[16px\] {
-    top: 16px
-}
-.-top-1 {
-    top: -0.25rem
-}
-.top-\[1rem\] {
-    top: 1rem
 }
 .top-\[1\.2rem\] {
     top: 1.2rem
@@ -118,14 +112,14 @@
     margin-top: 2rem;
     margin-bottom: 2rem
 }
-.-ml-4 {
-    margin-left: -1rem
+.-ml-3 {
+    margin-left: -0.75rem
+}
+.-mr-2 {
+    margin-right: -0.5rem
 }
 .mb-0 {
     margin-bottom: 0px
-}
-.mb-16 {
-    margin-bottom: 4rem
 }
 .mb-2 {
     margin-bottom: 0.5rem
@@ -135,6 +129,9 @@
 }
 .mb-8 {
     margin-bottom: 2rem
+}
+.ml-1 {
+    margin-left: 0.25rem
 }
 .mr-2 {
     margin-right: 0.5rem
@@ -156,6 +153,9 @@
 }
 .flex {
     display: flex
+}
+.table {
+    display: table
 }
 .grid {
     display: grid
@@ -193,6 +193,9 @@
 .h-screen {
     height: 100vh
 }
+.h-\[600px\] {
+    height: 600px
+}
 .min-h-screen {
     min-height: 100vh
 }
@@ -229,14 +232,14 @@
 .max-w-sm {
     max-width: 24rem
 }
-.flex-shrink {
-    flex-shrink: 1
-}
 .shrink-0 {
     flex-shrink: 0
 }
 .flex-grow {
     flex-grow: 1
+}
+.border-collapse {
+    border-collapse: collapse
 }
 .translate-x-0 {
     --tw-translate-x: 0px;
@@ -264,6 +267,9 @@
     -webkit-user-select: none;
        -moz-user-select: none;
             user-select: none
+}
+.scroll-mt-10 {
+    scroll-margin-top: 2.5rem
 }
 .scroll-mt-2 {
     scroll-margin-top: 0.5rem
@@ -319,6 +325,9 @@
 .gap-4 {
     gap: 1rem
 }
+.overflow-hidden {
+    overflow: hidden
+}
 .overflow-y-scroll {
     overflow-y: scroll
 }
@@ -340,6 +349,9 @@
 .rounded-l-full {
     border-top-left-radius: 9999px;
     border-bottom-left-radius: 9999px
+}
+.border {
+    border-width: 1px
 }
 .border-2 {
     border-width: 2px
@@ -384,6 +396,18 @@
 .bg-yellow-300 {
     --tw-bg-opacity: 1;
     background-color: rgb(253 224 71 / var(--tw-bg-opacity))
+}
+.bg-purple-300 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(216 180 254 / var(--tw-bg-opacity))
+}
+.bg-blue-300 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(147 197 253 / var(--tw-bg-opacity))
+}
+.bg-red-700 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(185 28 28 / var(--tw-bg-opacity))
 }
 .bg-gradient-to-b {
     background-image: linear-gradient(to bottom, var(--tw-gradient-stops))
@@ -441,17 +465,17 @@
 .pl-3 {
     padding-left: 0.75rem
 }
-.pl-36 {
-    padding-left: 9rem
-}
 .pl-4 {
     padding-left: 1rem
+}
+.pl-5 {
+    padding-left: 1.25rem
 }
 .pl-6 {
     padding-left: 1.5rem
 }
-.pl-8 {
-    padding-left: 2rem
+.pl-\[7\.9rem\] {
+    padding-left: 7.9rem
 }
 .pr-10 {
     padding-right: 2.5rem
@@ -673,17 +697,17 @@ body {
     }
 }
 @media (min-width: 782px) {
+    .md\:fixed {
+        position: fixed
+    }
     .md\:bottom-16 {
         bottom: 4rem
     }
     .md\:left-\[4\.5rem\] {
         left: 4.5rem
     }
-    .md\:right-2 {
-        right: 0.5rem
-    }
-    .md\:top-\[2\.7rem\] {
-        top: 2.7rem
+    .md\:top-\[1\.2rem\] {
+        top: 1.2rem
     }
     .md\:top-\[2\.8rem\] {
         top: 2.8rem
@@ -691,9 +715,6 @@ body {
     .md\:my-6 {
         margin-top: 1.5rem;
         margin-bottom: 1.5rem
-    }
-    .md\:mb-20 {
-        margin-bottom: 5rem
     }
     .md\:ml-0 {
         margin-left: 0px
@@ -733,6 +754,9 @@ body {
     }
     .md\:scroll-mt-10 {
         scroll-margin-top: 2.5rem
+    }
+    .md\:scroll-mt-20 {
+        scroll-margin-top: 5rem
     }
     .md\:grid-cols-6 {
         grid-template-columns: repeat(6, minmax(0, 1fr))
@@ -807,9 +831,41 @@ body {
         line-height: 2.5rem
     }
 }
+@media (min-width: 1440px) {
+    .\32xl\:-mr-1 {
+        margin-right: -0.25rem
+    }
+}
 @media (min-width: 1601px) {
-    .\33xl\:pr-\[calc\(\(100vw-1615px\)\*0\.5\)\] {
-        padding-right: calc((100vw - 1615px) * 0.5)
+    .\33xl\:pr-\[calc\(\(100vw-1618px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 1618px) * 0.5)
+    }
+    .\33xl\:pr-\[calc\(\(100vw-1620px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 1620px) * 0.5)
+    }
+    .\33xl\:pr-\[calc\(\(100vw-1614px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 1614px) * 0.5)
+    }
+    .\33xl\:pr-\[calc\(\(100vw-1616px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 1616px) * 0.5)
+    }
+    .\33xl\:pr-\[calc\(\(100vw-1612px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 1612px) * 0.5)
+    }
+    .\33xl\:pr-\[calc\(\(100vw-1610px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 1610px) * 0.5)
+    }
+    .\33xl\:pr-\[calc\(\(100vw-168px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 168px) * 0.5)
+    }
+    .\33xl\:pr-\[calc\(\(100vw-1608px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 1608px) * 0.5)
+    }
+    .\33xl\:pr-\[calc\(\(100vw-1606px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 1606px) * 0.5)
+    }
+    .\33xl\:pr-\[calc\(\(100vw-1604px\)\*0\.5\)\] {
+        padding-right: calc((100vw - 1604px) * 0.5)
     }
 }
 
