--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -6,14 +6,63 @@
   --clip-path: inset(0px -30px 0px -30px);
 }
 
-
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1.3;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
 html {
+  font-family: 'Round';
   font-size: var(--font-lg);
   font-feature-settings: "ss16" 1, "ss17" 1;
+  scroll-behavior: smooth;
   @apply leading-6 md:leading-[1.3rem];
 
 }
+
+body {
+  font-feature-settings: "ss16" 1, "ss17" 1 !important
+}
+
 .button,
 .wp-element-button {
   @apply block bg-lighter-bg p-0 h-10 w-10 md:w-12 md:h-12 rounded-full shadow-inner-special hover:shadow-md;
@@ -23,7 +72,7 @@ html {
   }
 }
 
-details .wp-element-button:first-of-type {
+details .wp-element-button {
   @apply bg-light-bg shadow-none hover:shadow-none 
 }
 
@@ -95,7 +144,7 @@ header {
 
 /* --------- STICKY MENU --------- */
 #sticky-menu {
-  @apply fixed bottom-10 md:bottom-16 right-0 md:right-2 h-auto 3xl:pr-[calc((100vw-1615px)*0.5)] z-10;
+  @apply absolute md:fixed bottom-10 md:bottom-16 right-0 h-auto 3xl:pr-[calc((100vw-1604px)*0.5)] z-10; 
 
   ul {
     @apply flex flex-col gap-4 md:gap-8 place-items-end;
@@ -170,7 +219,9 @@ header {
     @apply mb-2
   }
 
-
+  figure, p {
+    @apply scroll-mt-10 md:scroll-mt-20
+  }
   ul:not(.block-editor-block-variation-picker__variations) {
     li {
       @apply list-disc list-inside -indent-5 pl-6 pb-2 ;
@@ -209,10 +260,10 @@ header {
   } */
 
   .wp-block-details {
-    @apply border-t border-gray-300 py-1 mb-16 md:mb-20 ;
+    @apply border-t border-gray-300 py-1;
     /* box-shadow: inset  0px 1px 3px rgba(0, 0, 0, 0.1);  */
     & summary {
-      @apply list-none flex justify-between items-center flex-shrink  break-all;
+      @apply list-none flex justify-between items-center flex-shrink;
       
       
     }
@@ -307,7 +358,7 @@ form {
     } 
 
     label span { 
-      @apply -ml-4 md:ml-0
+      @apply ml-1 md:ml-0
     }
     
     input[type="checkbox"] {
@@ -327,6 +378,7 @@ form {
 
   input[type=text],
   input[type=email],
+  input[type=tel],
   textarea {
     @apply border-primary border-2 rounded-2xl py-1 px-2 ;
   }
@@ -356,11 +408,11 @@ form {
 
 /* special classes for stick elements */
 .page .stick {
-  @apply  sticky top-[1.2rem] md:top-[2.8rem] z-50 pl-36 md:pl-[8.4rem] xl:pl-[10.2rem] text-2xl leading-6 md:leading-normal md:text-3xl xl:text-4xl;
+  @apply  sticky top-[1.2rem] md:top-[2.8rem] z-50 pl-[7.9rem] md:pl-[8.4rem] xl:pl-[10.2rem] text-2xl leading-6 md:leading-normal md:text-3xl xl:text-4xl;
 }
 
 .page h1.stick {
-  @apply  fixed -top-1 md:top-[2.7rem] font-bold pl-8  md:pl-[8.4rem] xl:pl-[10.2rem]
+  @apply  fixed -top-1 md:top-[1.2rem] font-bold pl-5  md:pl-[8.4rem] xl:pl-[10.2rem]
 }
 
 .home header h1 {
